--- a/views/partials/subscriptions/subscriptions.ejs
+++ b/views/partials/subscriptions/subscriptions.ejs
@@ -10,7 +10,7 @@
                             <%= lingua.membership.notPlan%>
                         </p>
                         <br>
-                        <a href="/create-subscriptions"
+                        <a href="/subscribe?userEmail=<%= user?.email%>"
                             class="btn btn-primary btn-icon-text text-white m-1 btn-sm-block" type="button">
                             <i class="fas fa-plus btn-icon-prepend"></i> <%= lingua.membership.createSubscriptions%>
                         </a>
