--- a/views/index.ejs
+++ b/views/index.ejs
@@ -164,7 +164,7 @@
                                 style="background-color:transparent !important; border-top: none">
                                 <!-- <button class="btn btn-primary btn-lg select-product-btn m-2"
                                     value="<%# price.id%>">Create Subscriptions</button> -->
-                                <a href="/create-subscriptions" class="btn btn-primary btn-lg m-2"
+                                <a href="/subscribe" class="btn btn-primary btn-lg m-2"
                                     value="<%- price.id%>">
                                     <%= lingua.membership.createSubscriptions%>
                                 </a>
