--- a/views/subscriptions/handleInvalidSubscriptions.ejs
+++ b/views/subscriptions/handleInvalidSubscriptions.ejs
@@ -47,7 +47,7 @@
                                 <div class="col-12 col-lg-4 col-lg-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <%- include('../partials/subscriptions/information.ejs' , {invalid: true, subscriptions: invalidSubs, showManageBtn : false, customer : user, showCreateBtn: false, user: user}); %>
+                                            <%- include('../partials/subscriptions/information.ejs' , {invalid: true, subscriptions: invalidSubs, showManageBtn : false, customer : user, showCreateBtn: false, user: user, canManageSubscriptions}); %>
                                         </div>
                                     </div>
                                 </div>
