--- a/views/subscriptions/index.ejs
+++ b/views/subscriptions/index.ejs
@@ -38,7 +38,7 @@
             <!-- partial -->
             <div class="main-panel">
                 <div class="content-wrapper home-tab">
-                    <%- include('../partials/subscriptions/subscriptions.ejs' , {user, hasSubscription : user?.hasSubscription, subscriptions}); %>
+                    <%- include('../partials/subscriptions/subscriptions.ejs' , {user, hasSubscription : user?.hasSubscription, subscriptions, canManageSubscriptions}); %>
                 </div>
             </div>
         </div>
