Implement step after complete checkout process. Remove google btn from login. Optimize account validation.

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -88,7 +88,7 @@
                                                 <a href="/create-account"
                                                     class="auth-link text-black"><%= lingua.createAccount %></a>
                                             </div>
-                                            <div class="mt-4 text-center">
+                                            <!-- <div class="mt-4 text-center">
                                                 <div class="signin-other-title">
                                                     <div class="login-or">
                                                         <span>or</span>
@@ -101,7 +101,7 @@
                                                             Google</span>
                                                     </a>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <br>
                                             <div class="dropdown">
                                                 <button type="button" class="btn btn-secondary dropdown-toggle w-100"
