Bug fix disable Complete subscription btn when email is invalid.

--- a/views/auth/registerAndSubscribe.ejs
+++ b/views/auth/registerAndSubscribe.ejs
@@ -353,7 +353,9 @@
                             `<p class="alert alert-fill-danger mt-2 p-1"><i class="fa-circle-exclamation fa-solid"></i>Error on email validation.</p>`);
                     });
                 } else {
-                    checkoutBtn.attr("hidden", true);
+                    $('#addSub').prop('disabled', true);
+
+                    // checkoutBtn.attr("hidden", true);
                     email.reportValidity();
                     showResult('#emailValidationResult',
                         `<p class="alert alert-fill-danger mt-2 p-1"><i class="fa-circle-exclamation fa-solid"></i>Invalid Email</p>`);
