Bug fixes on completeCheckout template.

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -81,7 +81,7 @@
                                                                     <%= customer.email%>
 
                                                                     <% if(customer.isIncomplete()) { %>
-                                                                    <i class="fa fa-warning text-warning" title="Implete account."
+                                                                    <i class="fa fa-warning text-warning" title="Incomplete account."
                                                                         style="padding-left: 10px;"></i>
                                                                     <% } %>
                                                                 </a>
