--- a/views/subscriptions/completedCheckout.ejs
+++ b/views/subscriptions/completedCheckout.ejs
@@ -62,7 +62,7 @@
                                                 </p>
                                                 <% } %>
 
-                                                <%# if(customer.isIncomplete()) { %>
+                                                <% if(customer?.isIncomplete()) { %>
                                                 <h5><%= lingua.welcomeUser(stripeCustomer.email)%></h5>
                                                 <br>
                                                 <h5>
@@ -88,7 +88,7 @@
                                                     class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn w-100"
                                                     type="button"><%= lingua.account%>
                                                 </a>
-                                                <%# } %>
+                                                <% } %>
                                             </div>
                                         </div>
                                     </div>
