--- a/views/auth/completedActivationRequest.ejs
+++ b/views/auth/completedActivationRequest.ejs
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>
-        Activate Account Request
-    </title>
+    <title>Request Completed</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../../vendors/feather/feather.css">
     <link rel="stylesheet" href="../../vendors/mdi/css/materialdesignicons.min.css">
@@ -15,18 +13,12 @@
     <link rel="stylesheet" href="../../vendors/typicons/typicons.css">
     <link rel="stylesheet" href="../../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
-    <link rel="stylesheet" href="../../css/register.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../../vendors/select2/select2.min.css">
-    <link rel="stylesheet" href="../../vendors/select2-bootstrap-theme/select2-bootstrap.min.css">
     <!-- endinject -->
     <!-- Plugin css for this page -->
-
     <!-- End plugin css for this page -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../../css/vertical-layout-light/style.css">
+    <link rel="stylesheet" href="../../vendors/flag-icon-css/css/flag-icon.min.css">
     <!-- endinject -->
     <link rel="shortcut icon" href="../../images/favicon.png" />
 </head>
@@ -36,30 +28,26 @@
         <div class="container-fluid page-body-wrapper full-page-wrapper">
             <div class="content-wrapper d-flex align-items-center auth px-0">
                 <div class="row w-100 mx-0">
-
-                    <div class="col-lg-5 col-m-6 col-sm-12 mx-auto">
-                        <div class="py-4 px-4 px-sm-5">
+                    <div class="col-lg-6 col-md-6 col-sm-12 mx-auto">
+                        <div class="text-center py-4 px-4 px-sm-5">
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="card">
                                         <div class="m-0">
-                                            <% if(user) { %>
-                                            <a class="btn float-end" id="close-registration" href="/logout">
+                                            <a class="btn float-end" id="close-registration" href="/login">
                                                 Login
                                             </a>
-                                            <% } %>
                                         </div>
                                         <div class="card-body">
+
                                             <div class="card-title d-flex flex-nowrap">
                                                 <div class="brand-logo text-center mb-1 w-100">
-                                                    <a href="/account">
-                                                        <img src="/images/charlieBoy/CB-5.jpg" alt="logo"
-                                                            style="width: 50% !important;">
-                                                    </a>
+                                                    <img src="/images/charlieBoy/CB-5.jpg" alt="logo"
+                                                        style="width: 50% !important;">
                                                 </div>
                                             </div>
-                                            <h4 class="card-title text-center">
-                                                Activate Account Request
+                                            <h4 class="card-title">
+                                                <%= lingua.processCompleted%>
                                             </h4>
                                             <div class="text-center">
                                                 <% if (messages.error) { %>
@@ -78,39 +66,22 @@
                                                     <%= messages.warning %>
                                                 </p>
                                                 <% } %>
+                                                <p>
+                                                    <%= lingua.verifyEmail%>
+                                                    <a href="/activateAccountRequest">
+                                                        Request Again.
+                                                    </a>
+                                                </p>
                                             </div>
-
-                                            <form id="form-activate-account" class="pt-3"
-                                                action="/activateAccountRequest" method="post">
-                                                <div class="row">
-                                                    <div class="col-lg-12">
-                                                        <div class="form-group">
-                                                            <label class="required"
-                                                                for="email"><%= lingua.user.email%></label>
-                                                            <input type="email" id="email" name="email"
-                                                                class="form-control form-control-lg" value="<%= email%>"
-                                                                placeholder="example@gmail.com" required />
-
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="mt-3">
-                                                        <button
-                                                            class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
-                                                            type="submit"> Request</button>
-                                                    </div>
-                                                </div>
-                                            </form>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
+
             <!-- content-wrapper ends -->
         </div>
         <%- include('../partials/footer.ejs'); %>
@@ -119,19 +90,18 @@
     </div>
     <!-- container-scroller -->
     <!-- plugins:js -->
-    <script src="../../vendors/js/vendor.bundle.base.js"></script>
+    <script src="../../vendors/js/vendor.bundle.base.js "></script>
     <!-- endinject -->
-    <!-- Plugin js for this page -->
-    <script src="../../vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+
     <!-- End plugin js for this page -->
     <!-- inject:js -->
-    <script src="../../js/off-canvas.js"></script>
-    <script src="../../js/hoverable-collapse.js"></script>
-    <script src="../../js/template.js"></script>
+    <script src="../../js/off-canvas.js "></script>
+    <script src="../../js/hoverable-collapse.js "></script>
+    <script src="../../js/template.js "></script>
+
     <!-- endinject -->
-    <!-- Custom js for this page-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.3/dist/sweetalert2.all.min.js "></script>
     <script src="./js/jquery.cookie.js" type="text/javascript"></script>
 </body>
-
 
 </html>
