--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -54,7 +54,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12">
 
                     <div class="d-flex justify-content-between align-items-start align-items-center">
-                        <h6 class="mb-0">Information</h6>
+                        <h6 class="mb-0"><%= lingua.information%></h6>
                         <% if(canManageSubscriptions) { %>
                         <div class="dropdown">
                             <button type="button" class="btn btn-icon mx-0 p-0" id="dropdownMenuIconButton3"
@@ -67,7 +67,7 @@
                                 <a class="dropdown-item" href="javascript:void(0)" title="Cancel Subscription"
                                     onclick="return confirmCancelSubscription('<%= stripeSubscription.id %>')">
                                     <i class="fa-solid fa-cancel"></i>
-                                    Cancel Subscription
+                                    <%= lingua.cancel%>
                                 </a>
                                 <div class="dropdown-divider"></div>
                                 <% } %>
@@ -76,7 +76,7 @@
                                 <a class="dropdown-item" href="javascript:void(0)" title="Renew Subscription"
                                     onclick="return confirmRenewSubscription('<%= stripeSubscription.id %>', '<%= customer.email%>')">
                                     <i class="fa-solid fa-copy"></i>
-                                    Renew Subscription
+                                    <%= lingua.renew%>
                                 </a>
                                 <div class="dropdown-divider"></div>
                                 <% } %>
@@ -85,7 +85,7 @@
                                     value="<%= stripeSubscription.id%>" class="dropdown-item sync-btn"
                                     title="Sync with Stripe">
                                     <i class="fa-solid fa-rotate"></i>
-                                    Synchronize Subscription
+                                    <%= lingua.synchronize%>
                                 </a>
                                 <%# } %>
                             </div>
@@ -96,18 +96,18 @@
                     <div>
                         <% if([stripeStatus.ACTIVE, stripeStatus.TRIALING].includes(stripeSubscription?.data?.status)) { %>
                         <span class="badge badge-outline-success float-end" style="text-transform: uppercase"
-                            title="Membership Status" data-toggle="tooltip" data-placement="bottom">
+                            title="<%= lingua.membership.status%>" data-toggle="tooltip" data-placement="bottom">
                             <%= stripeSubscription?.data?.status %>
                         </span>
 
                         <% } else if([stripeStatus.CANCELED, stripeStatus.UNPAID, stripeStatus.NONE, stripeStatus.INCOMPLETE_EXPIRED].includes(subStatus)) { %>
                         <span class="badge badge-danger float-end" style="text-transform: uppercase"
-                            title="Membership Status" data-toggle="tooltip" data-placement="bottom">
+                            title="<%= lingua.membership.status%>" data-toggle="tooltip" data-placement="bottom">
                             <%= stripeSubscription?.data?.status %>
                         </span>
                         <% } else { %>
                         <span class="badge badge-info badge-opacity-danger float-end" style="text-transform: uppercase"
-                            title="Membership Status" data-toggle="tooltip" data-placement="bottom">
+                            title="<%= lingua.membership.status%>" data-toggle="tooltip" data-placement="bottom">
                             <%= stripeSubscription?.data?.status %>
                         </span>
                         <% } %>
@@ -228,10 +228,10 @@
                             ID: <%= stripeSubscription.id%>
                         </p>
                         <p>
-                            Created:
+                            <%= lingua.created%>:
                             <%= moment(stripeSubscription?.data?.created * 1000).format(completeDateFormat)%>
                         </p>
-                        <p> Period:
+                        <p>  <%= lingua.period%>:
 
                             <%= moment(stripeSubscription?.data?.current_period_start * 1000).isValid() ? moment(stripeSubscription?.data?.current_period_start * 1000).format(shortDateFormat) : 'N/A' %>
                             /
@@ -241,7 +241,7 @@
                         <% if(stripeSubscription?.data.cancel_at) { %>
                         <p>
                             <b class="error">
-                                This membership its valid until:
+                                <%= lingua.validUntil%>:
                                 <i class="fa-solid fa-calendar fa-fw"></i>
                                 <%= moment(stripeSubscription?.data?.cancel_at * 1000).isValid() ? moment(stripeSubscription?.data?.cancel_at * 1000).format(shortDateFormat) : 'N/A' %>
                             </b>
@@ -352,7 +352,7 @@
         var selectedCars = document.getElementById(`selectedCars-${itemid}`);
         var carsToRemove = document.getElementById(`carsToRemove-${itemid}`);
         var requiredQty = $(`#requiredQty-${itemid}`).val();
-        var selectedDisplay = $(`#selectedDisplay-${itemid}`)
+        var selectedDisplay = $(`#selectedDisplay-${itemid}`);
 
         $(`#handle-valid-cars-form-${itemid} input:checkbox[type=checkbox]`).each(function () {
             toRemove.push($(this).val());
@@ -370,14 +370,14 @@
             $(`#handle-valid-cars-form-${itemid} input:checkbox[type=checkbox]:not(:checked)`).each(function () {
                 $(this).attr('disabled', 'disabled');
             });
-            validationTxt.html(`<p class="valid"> Maximum car selected. Press confirm button to continue.<p>`)
+            validationTxt.html(`<p class="valid"> Maximum car selected. Press confirm button to continue.<p>`);
             confirmValidCarsButton.removeClass('btn-secondary').addClass('btn-primary').removeAttr('disabled');
 
         } else if (selected.length < requiredQty) {
             $(`#handle-valid-cars-form-${itemid} input:checkbox[type=checkbox]`).each(function () {
                 $(this).removeAttr('disabled');
             });
-            validationTxt.html(``)
+            validationTxt.html(``);
             confirmValidCarsButton.removeClass('btn-primary').addClass('btn-secondary').attr('disabled', 'disabled');
         }
 
@@ -445,13 +445,14 @@
         }).done(function (result) {
 
             Swal.fire({
-                title: 'Are you sure to cancel this subscription?',
+                title: '<%= lingua.cancelMembershipValidation%>',
                 text: result.message,
                 icon: 'warning',
                 showCancelButton: true,
+                cancelButtonText: '<%= lingua.cancel%>',
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
-                confirmButtonText: 'Yes, cancel it!'
+                confirmButtonText: '<%= lingua.confirmCancel%>'
             }).then((resultOfConfirmation) => {
                 if (resultOfConfirmation.isConfirmed) {
                     console.log(`${subscriptionID}`);
@@ -499,13 +500,14 @@
         let email = userEmail;
 
         Swal.fire({
-            title: 'Are you sure to renew this subscription?',
-            text: 'Create a new subscription with the same properties.',
+            title: '<%= lingua.renewMembershipValidation%>',
+            text: '<%= lingua.renewMembershipInformation%>',
             icon: 'warning',
             showCancelButton: true,
+            cancelButtonText: '<%= lingua.cancel%>',
             confirmButtonColor: '#3085d6',
             cancelButtonColor: '#d33',
-            confirmButtonText: 'Renew!'
+            confirmButtonText: '<%= lingua.confirmRenew%>'
         }).then((resultOfConfirmation) => {
             if (resultOfConfirmation.isConfirmed) {
                 console.log(`${subscriptionID}`);
