--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -8,7 +8,7 @@
     <title><%= lingua.user.users%></title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
-    <!-- <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css"> -->
+    <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="../vendors/ti-icons/css/themify-icons.css">
     <link rel="stylesheet" href="../vendors/typicons/typicons.css">
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
